--- a/index2.html
+++ b/index2.html
@@ -367,6 +367,69 @@ its truly beautiful isn't it... when <b>he</b> said .....
             mysweetpotato 😊<br>
             <br>
              <hr>
+<hr>
+<b>13-sep-2023 : 20:17 PM</b> <br><br>
+<i>Oi don't worry so much or you will get stroke 😑 baka baka baka</i><br>
+it is just like im getting a little like pain once after i started crying...👉👈<br>
+but now im soooooo... happy i can't tell it in words, you stupid potato please be safe okay <br>
+<br>
+<i>You keep on improving, you we get benifit of life and learn to enjoy them.. life always doesn't give what you hope for but if you try you best and hardest you may get what you seek through.. oi learn to have patience and determination </i><br>
+form now on i will try to not to cry , and i'll move even focused into the acedemics and ill prove myself and stand on all promises i made to you,,, i ll definitely gonna <br>
+<br>>
+<i>😅 Well I think you miss me a lot , right.. Don't worry about me , I am learning to grow up and getting responsibel.. kind of </i><br>
+stupid 😭 you stupid ... stupid... stupid... please always be safe <br>
+the kind of news from north east region of india scared me a lot please always be careful and safe...<br>
+<br>
+and oi did you remeber i said you earlier about im thinking kind of making a project about girls safety protection and all and i discussed with my teacher 
+today my she said me there i had a competetion from government which is a coding competition if i can manage to place my project there in competetion, them im gonna prove you it😊<br>
+i'll try my best to do it <br>
+<br>
+<i>I read what you wrote when I get chance but mom always keep an eye on me so replying is not so easy .. I will soon reply to you 
+    Those pics of nature is wonderful </i> <br>
+    😭Arigato ... please be careful dont risk this time im not gonna cry or worry even so please be safe okay, for you instead of worrying i'll try to pray god what i love for<br>
+    dont risk take your time on your safety side and please be safe always<br>
+    <br>
+    <i>I write to you sometimes and sometimes I act like my diary is my tab and I imagine texting 
+        And recent before one week I have started to read my manga and story book .. 
+        one novel (it ends with us) I have completed second part I just started (It starts with us) ,
+         I want to say all about it to you </i> <br>
+         thats so adoreable and im doing something like that with communication notes but i reached all way to mid page so now im trying to resist my writing in it<br>
+         👉👈 i lost in scrolling while in sunday i started reading out prev convos and stated crying a bit 👉👈 then end up stuck in scrolling and i saved few to show you ..<br>
+         ushhhhh surprice 😊<br>
+         heartfully i'll wait for the time to fill up my ears and all my head with your tone 😊, im waiting to listen to you all day saying manything things <br>
+         oiii stupid dont stuxk in reading books all way dont forget to study your best okay, <br>
+         👉👈 instread of reading i wanna know what in the book by you <br>
+         👉👈 will you please tell me all that all the day long long that a 24h k 😊 okay👉👈<br><br><br>
+         <i>My favourite quotes 🤭 "Just keep swimming until you reach the shore" and more quotes are there I will tell you 
+            And I like this charecter so much his name is "Atlas" from a homeless boy 
+            he have turned into successful business man a chief and he is so organised, neet, 
+            so thought full, caring and he loves Lily from heart truly.. it reminds me of you..</i><br>
+
+            while reading this, im again stuck in fall of tears<br>
+            gomen 👉👈 i tried but the line something connected so deep... <br> more than atlas let me be your <b>strong organised caring loving neet idiot😊</b>
+<br>
+heartfully i will try mybest to make you experince the stroy of atlas and lilly in us😊 <br>
+shall i...<br>
+<br>
+🤨🤨🤨🤨🤨<br>
+tell me <br>
+are you drinking 10 bottles a day?<br>
+food at time?<br>
+meditation ... and sleep ?????? <br>
+hehee i know you do all well just checking a little like its like ....like ... 😊<br>
+🤨 🤨 🤨 <br>
+if not follow else i'll add wedness day in my fasting... <br>
+<br>
+<br>
+for you good night my sweet potato always keep smile on face <br>
+and prepare my Ipsl way to disney land😋😋😋 <br>
+😅😅😅 gomen <br>
+good night sleep well 
+<br>
+My Hintata💝<br>
+your LG Naruto 😊<br>
+
+
 
 <!--- end of pass--->
 
