--- a/index2.html
+++ b/index2.html
@@ -428,7 +428,10 @@ good night sleep well
 <br>
 My Hintata💝<br>
 your LG Naruto 😊<br>
-
+<br><br>
+			   still a dump potato <br>
+			   oii i representing your message in pink mine in blue its a clue for you watermelon just find the riddle <br>
+			   -_- <i> -_-</i>
 
 
 <!--- end of pass--->
