--- a/index2.html
+++ b/index2.html
@@ -165,10 +165,153 @@ and say her that her loyal idiot not going to remain as a looser, he love her so
 <i>isn't it?</i>
 <br>
 now its 11:34 PM so im gonna pray them sleep <br>
-dont stay up late you should also sleep early okay you potato<br>  
-			   LYSM GOOD night
+dont stay up late you should also sleep early okay you potato<br>   
 
 <br><br><br>
+<hr>
+16-09-2023 : 11:11PM <br>
+<hr>
+<i> Ok so as you wanted to know about the competition I participated in ,,, yes the song competition was amazing well unfortunately I didn't get any pos chance each singer were good in group c every one was saying that my d
+    Song was amazing I even receive a chocolate from a junior, But but but you know what 😆😆 guess it I participated in art competition and I came Frist very easily , 
+    I became Frist but this is not enough I need to be more better in creative so that I can pursue my career,</i><br>
+    <br>
+    wow im so happy to know you performed well, you already win before the competition when you are choosen to it where you had to change song in end in limited time and,,, you are the best 😊 <br> just keep moving forward with a strong mind<br>Always😊 <br><br>
+    <i>Ooh and another good thing happened that is I went for activity class as cooking in my school they provide all kinds of activities but class 10 and 12 can't do because they have board exam but I got to attend one class in Saturday because I participated in compitition well one one knew that I went for the class and in cooking class I help fee juniors and they looked so happy because they were struggling to make pizza but I know how to so I helped I even help another in cake , I love to bake </i><br><br>
+    oooooooh thats kind of amazing 😃😃😃 you made such a greatday for them in helping i can fell experince that in words,,, and may be cause of school decision they make decision in order to board exams like that, even thou you made such a great heart winning by helping them, you always amazing my hero always ... my good girl <br>
+    oiii when i gonna get my home made pizza and cake?😋😋😋😋😋😋 im waiting for that  😋😋😋<br><br>
+
+    <i>And remember I said you about the competition for going to other school in a band well even that was amazing experience it was my Frist time I got selected to go out of school and represent my school, well didn't get any position but the experience was forever memorable to me they gave us to eat delicious food for lunch , 
+        I just got the best of memories for last year in school I will forever cherish, ❤️</i><br>
+        its kind of feeling so happy to know you had won the memory from school as you ever wish, 😃 <br>
+        now i guess this will help you rebuild your mind even stronger... Isn't it my HERO?<br>
+        i wanna listen to you about all the things and all about that memories 😊 <br>
+        dont forget to tell me all those okay!!!! <br>
+        i wanna see and experience it in your tone and in your eyes 😊<br><br>
+
+        <i>Well I hope even you are doing your best and making the best of memories in your college, 
+            hey one thing remember don't blind trust anyone and don't get involve in wrong did avoid it, 
+            and if someone tries to pick up a fight then try to claim then instead of fighting back.. 
+            be the one with PATIENCE, CLAM, DETERMINED, AMBITIOUS... ok !
+        </i><br>
+        yesss im doing so well and i guess in few days im gonna show you a winning of mine from this little work in beginning of the college<br>
+        and sure im not gonna trust anyon eblind and im gonnna keep myself away from the wrong things<br>
+      <b> you know what : Mom and you are keep saying everything same, when im in call with mom she make me remind me of you and same when reading you text you remind me Mom
+        im feeling so much lucky and glad to god to put you both in my life <br>
+        and as you said even if someone try to pick a fight, ill make them regret rather enter to fight and sure as you said i listen to all<br>
+        did i ever say no to your instruction maa😊<br>
+      </b> 
+
+      <i>Hey , thanks for wishing me teachers day, even you teached me so many things and for you only now I am responsible enough to take care of myself health... 
+        Last night I slept at 11pm and woke up at 9 and today I drank 8 bottles till now ....</i><br>
+        im feeling both happy and proud at same point, where the way you said
+        <br> "for you only now I am responsible enough to take care of myself health "<br>
+        its worth that anything to heartfully say that to god in end of fasting day in this feel <br>
+        the you a lot to you for taking best care of my princess😊<br>
+        <br>
+
+        <i>Hey you know what happened in teachers day ..  we had school at 11am because before us the primary school was celebrating then we went so I had a stage performance with my band a song so I went only for that reason and this time I didn't took any hand made card I didn't even bought flowers so I had nothing to give to any teacher but I thought of to present an act in front of them so I started doing a mime act and I was giving invisible flower to every teacher by bowing down and they were smiling , laughing and few was acting along with me ... But I didn't expect what happened next, you know what I recieved a flower from teacher (usual things happen to me 😅) and rest the even was also amazing other performance and all
+            By the way , Which student recieve flower form teacher at teachers day ! I was amazed by this.. I got a rose, a flower from mentor ☺️</i> <br>
+            😆😆 thats so adorable you made such a insane creativity gift to yoour teachers i guess they not gonna forget that thing in their teaching ages 😆😆 still its an amazing thing <br>
+            and you got a rose from your mention it representing a good student you are to them <br> 
+            in my college there a little event got counducted and i said you know two teachers supporting me from start knowing my skill <br>
+            😆😆 just like you we tried a unique way of wish those teachers just like you did, they are little hard to explain i may say you later how we did 😊 <br>
+            <br>
+
+            <i>And about your pictures those natural pics which you have took are amazing 
+                even I like clicking photos of sky, flower, colourful insect and beauty of nature in camera.. nice hobby but I don't do everytime.....
+                The bug in the copy was so pretty
+                The pot paintings are also so inspiring</i><br>
+                Arigato 😊<br>
+                when you do click some let me see 😁<br>
+                😆😆 you know what my class teacher calling me danish after seeing the name on it and asking me what it mean by <br>
+                ladybug and catnoir <br>
+                maybe non of my classmates know about it<br>
+                😅 when im in way to college i saw none on the street then i immediately became creepy and start clicking pics of it 😅😅😅 <br>
+                <br>
+                <br>
+                <i>What is MUSM ?</i>
+                👉👈...<br>
+                it mean... missing you so much ...<br>
+                <br><br>
+                <i>I want to travel the world with you 
+                    I want to be your little talkative girl 
+                    I want to live beautiful life with fantacy from dream come true.... 
+                    But the sad part is this is not dream this is life goals which you to I want to fulfill.. and for that you know we need what
+                    And plus you need to fulfill your condition before you get me ...</i><br>
+                    you know what; <br>
+                    did you rememeber you use to say back in days like , " i never supporting you im keeping you troubles worries... bla.. bla... bla"<br>
+                    but see what you said here to me like all the time, you keep motivating me towars our goals , just like you saying "baka"/"idiot"/"stupid" instread of ILY<br>
+                    you always keep motivating me supporting me saying .. : " of we can't fight we can't win" <br>
+                    so now its all my respinsibility to keep the value for all your words by showoff by subitting my self with sucess <br>
+                    and i gonna go any far to fullfill requirements for my K😋😋😋❤️‍🔥<br>
+                    just belive im gonna prove its all the fantacy come true in real life 😁<br><br><br>
+                    
+                    <i>I love the way you say things all the words you say it's soothing like atlas say... 
+                        I have a feeling that you can do better and you are 😄
+                        Just keep swimming.. swimming swimming swimming......even I am do the same </i><br>
+                        i love it more the way you doing just like Hinata always standing and supporting naruto if you have chance just see or i'll search and put it here later <br>
+                        and thankyou a lot for believing in me im not gonna dissapoint you <br>
+                        im sure about it <br> im never gonna give up, even giving up is not an option for us 😁<br><br>
+
+                        <i>And yes I will remind your little lady to be clam, happy and healthy ☺️
+                            Even you do the same ok!</i><br>
+                             i always belive in you, just keep my little lady more happy possible 😊 <br>
+                             thats a lot for me <br>
+                             and say her im not skipping sleep or food and im drinking 100ml milk everyday <br><br>
+
+                             <i>Thanks for the project, I will start doing it as soon as my exams ends ........ And later if get time then find CBSE class 12 sample question paper for boards form cbse website, 
+                                ok ! Don't forget I really need but if you can't find or do then let me know then I will ask someone else ok?</i><br>
+                                -_- thanks,,, -_- bahh!!!<br>
+                                okay mam im gonna put it here as early as possible, just a little time only i need to find<br>
+                                <br>
+
+                                <i>Have you deleted my pics ? 
+                                    Hey do you have my all the painting pic ? If you have then keep it safe ok </i><br>
+                                    huh!!! how can i show you proof about the picture did i delete or not... <br>
+                                    yes i have kept all the paintings safe with me 😁<br>
+                                    you know once teacher asked me what your lockscreen means "noragami's art"<br>
+                                    i replied to her a "a soul call", a perosn sometimes mother and sometimes daughter to me drew it <br>
+                                    she said that she liked that art so such where it representing protecing and she described me something amazing about not putting faces in it<br>
+                                    seems like your art got fans from my college also 😁<br>
+                                    <br>
+
+                                    <hr><hr>
+                                    <i>Hey read this it's from bhagvat gita and Mahabharata.... Another sacred holy book same as Bible </i><br>
+                                    sure im definitely gonna read them tommorow 😊<br><br>
+                                    <i>Hey what it means I didn't understand... 🤔 See the pic</i><br>
+                                    hosthe  psil<br>
+                                    k<br>
+                                    nda<br>
+                                    savali<br>
+                                    aer niem<br>
+                                    only<br><br>
+                                    👉👈 just azrrange alphabets in each word then you may get what i mean<br>
+                                    👉👈<br>
+                                    👉👈<br>
+                                    okay 👉👈<br>
+                                    <br><br>
+                                    its about 1:24 AM <br>
+                                    i guess you already sleeping <br>
+                                    good night my little princess sleep well and come in my dreams<br>
+                                    tuen left and pamper me <br>
+                                    <br>
+                                    <b> and Wishing you a happy Ganesh Chaturti or i dont know what it called in hindi </b> <br>
+                                    when grand father alive we used to do a soil statue and then pooja every year, but this year its....<br>
+                                    <br>
+                                    so once again wishing you a happy ganesh pooja enjoy, as i know ganesh used to do pooja as starting pojja of other<br>
+                                     so do wish for peace , strength, knowledge , wisdom . you definitely gonna do well in exams <br>
+                                     for now good night<br>
+                                     now i may eat a little then after few minutes of that siting asana you said then im going to sleep after prayer and i will wake up after completion of 8+ hours of sleep<br>
+                                     so Good night maa😊<br><br>
+                                    A LYSM
+
+
+
+
+
+
+
+
 
 <!--- end of pass--->
 
