--- a/index2.html
+++ b/index2.html
@@ -306,8 +306,24 @@ dont stay up late you should also sleep early okay you potato<br>
                                     A LYSM
 
 
+<hr><hr>
 
+17-09-2023 : 11:43 AM <br>
+i woke up at 9:30 am then exercise and rest... <br>
+just now i have read those from <br>
+<i>Hey read this it's from bhagvat gita and Mahabharata.... Another sacred holy book same as Bible </i><br>
+those you wrote are really amazing and meaningfull i read twice each the describing was amazing clear to understand in other words what i understand in all of that is <br>
+we have two options in a sort of choices based on we whose <br>
+- Adopt, move , go as far as you can to win ( every force has a oppose reaction, that mean if you work you will see result if you sit without working you will only the time passing to dead line)<br>
+in the end its win/loose all depends on how you chooose to take in path .<br> and you know one of teacher said a line in first class from mahabhatay -- its goes like : "yata tadaina tada tadesta , by krishna" something like this line <br>
+where god said do what you wanna do just do, at certain point result will appear all its depends on the desire honesty and dedication of the path of action in the end Karma the thing stay to declare the result<br>
+<br>
+that time i feel so excite something those are amazing right!!<br>
+then in end of class my teacher said , "im none to command you, even krishna said to arjuna what you wanna do i'll stay by side of truth, then how a person can comand you as teacher": that time i found that he is the best teacher i had found , now that teacher helping we to improve  my skills to reach out of box <br>
+his name is : Satish Aisthey - he teach java : but for him i am his co-doveloper in projects ^-^<br><br> i wanna see and more like that from you they are so meanig full to know <br>
 
+<br>
+and oii when sending me message select option to keep or clear the previous<br>
 
 
 
