--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,7 @@
         <header style="text-align:center; font-size:40px;"><br> Konichiwa <br>
 		all the bestoooo<br><br> 
         Happy Ganesh Festival 🌸<br>
+		 scroll down to Q/A's
         <br>
        
 		<br>  <br></header> 
