--- a/index2.html
+++ b/index2.html
@@ -175,6 +175,66 @@ its truly beautiful isn't it... when <b>he</b> said .....
              <br>
              <br>
                           
+             <hr>
+             <hr>
+             21-sep-2023 : 8:11PM <br>
+             <i> [20-sep-2023 : 11:06PM] -- Oi but you know what I am feeling so scared like about to cry..
+                 at 19 September board exam registration sopoused to be 
+                 but my registration have been postponed to 28 September principle sir had an discussion with my parents 
+                 and my parents are not saying anything to me what he said i just know they looked very disappointed ☹️ 
+                 and mom said if i can't score average then i might risk everything.. and I can barely pass 
+                 how am I supposed to complete my dream this way how admission and all .... i don't know what is going to happen... 
+                 feeling so anxious ... i don't know why i don't like studying 😞 few of my friends registration is done at 19th September....
+                 why do this always end up happening , i am repeating things like class 11 situation 🙁 like I am so dommed </i><br>
+                don't worry, and dont be panic okay.. <br>
+                so you still have chace to register to board exams this time dont forget it, if have chance do it now<br>
+                and don't over thing i guess the principle may said something like <br>
+                "exams are coming so you need to care her studies a little more to help her with else it may go difficult" i think this may the priciple said to your parents<br>
+                dont worry your parents may lost thoughts on how they can help with<br>
+                did you forget how me planned to achieve top score in board so dont loose hopes, dont say yourself negative<br>
+                youre my lady bug things just trying to put you down will you accept it, <br>
+                <div class="mypap2"><a href="https://youtu.be/23U6Rld3Fkk?si=gYXS7x8HPmGU81oK"><span   >click here  </span></a> </div>   <br>
+                see it even she also felt but never give up, dont worry dont let anything ruin your mind<br><br>
+                oioi i have a surprice for you if you focus well in your upcoming, its a surprice😇<br>
+                you are the best you can definitely do well <br> 
+                just forget that its studies vs you, its you with your dreams. and your dreams have these,,, from tomorrow lets again start, again from scratch tomorrow is day 1<br>
+                lets again try that 21 days challenge to further and you know what from monday i have exams but i still didnt start studied anything cz from start of college im participated in a national level compitetion<br>
+                not alone i also have 3 project ideas so i manage to make extra two teams to come up and maybe in between 22 and 30 we need to appear along i have exams, i still have enough confidence and motivation because of you <br>
+                yes!!! cz from the start you always motivtating me toward never giving up then how can i suppose to agree to my girl going like that<br>
+                tomorrow i'll try to give you the tool to get quick in subjects you fear <br>
+                forget about class 11, dont forget that you are wonder women <br>
+                this class 12 is just a gate to your dreams not the entire path outside there a big world to achieve big, and even these thing one who said is you when im about to give up<br>
+                what ever way you want help i will try if i can , just ask me and try to allocate an hour in morning and an hour in evening everyday as a revision it will help you ace memory of your subject easily and even your parents will not dissapoint with your hard work<br>
+                dont worry god always with you😇 <br>
+                lets pray together everyday lets win lets dont give up<br>
+                lets fight forward out there disneyland, japan and entire world is waiting for us <br>
+                lets study hard and achiever our dreams<br>
+                you know what then and im always proud of you 😇 cz i always belive you. you definitely gonna win dont worry if you ever feel low just ask god you give you strength to achieve it <br>
+                and dont forget that god only give hardest test to gods strongest adorable person <br>
+                lets study together and lets win it okay <br>
+                give your heartful dedication towards strength lets fight <br>
+                giving up is never an answer for you<br>
+                Love you My hero<br>
+                My hero never give up cz she's my Hero😇<br><br>
+                why saying thanks for material <br>
+                -_-<br>
+                if you ever say thanks like that then i'll bit=  your....<br>
+                😋 😋 😋 😋 <br>
+                <div class="mypap2"><a href="https://drive.google.com/file/d/1lkOvl3nTHhevTE3BYRvfD2UX4vbDQQVz/view?usp=sharing" ><span   >just see it </span></a> </div>  <br>
+                lets study like this <br>
+                you know what im actually joined in 2nd year as lateral entry due to technincal board to engineering i said you all before... i guess you rember<br>
+                one of the person from another section said to me participating external compitition is a waste of time and wait and see how im gonna stand 
+                over this lateral entry students, i said exams are just near i still have enough time to deal all <br>
+                he said if like that lets see in results im gonna wait to see your rank in bottom <br>
+                i replied , if you expect something like that you may remain unsatified, if you still wanna see it, youre welcome to pray for it 😅😅 that movement he touched my ego by challeging me now im gonna break his ego in just a week of time <br>
+                take it a challenge and break egos and expectation of the people want to see you buttom <br>
+                lets break their egos ❤️‍🔥<br>
+                <br>
+                <hr>
+                
+
+
+
 <!--- end of pass--->
 
     <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
