--- a/index2.html
+++ b/index2.html
@@ -220,7 +220,7 @@ its truly beautiful isn't it... when <b>he</b> said .....
                 -_-<br>
                 if you ever say thanks like that then i'll bit=  your....<br>
                 😋 😋 😋 😋 <br>
-                <div class="mypap2"><a href="https://drive.google.com/file/d/1lkOvl3nTHhevTE3BYRvfD2UX4vbDQQVz/view?usp=sharing" ><span   >just see it </span></a> </div>  <br>
+                <div class="mypap2"><a href="https://youtu.be/gWysia9F0Zo?si=jbUDH7EpjyXHk5xh" ><span   >just see it </span></a> </div>  <br>
                 lets study like this <br>
                 you know what im actually joined in 2nd year as lateral entry due to technincal board to engineering i said you all before... i guess you rember<br>
                 one of the person from another section said to me participating external compitition is a waste of time and wait and see how im gonna stand 
