--- a/index2.html
+++ b/index2.html
@@ -233,6 +233,16 @@ its truly beautiful isn't it... when <b>he</b> said .....
                 <br>
                 <hr>
                 
+                <br>
+
+                22-sep-2023 : 10:09PM <br>
+                hey how you are doing now hope everything is fine and well, i guess rules gone strict again about the phone right<br>
+                study well for exams you definitely gonna achive it <br>
+                lets study to gether and here is the tool as i said<br>
+
+                  <div class="mypap2"><a href="https://octobunny1.github.io/nift/studytool.html" ><span   >click here to study tool </span></a> </div>   <br>
+                  by click on that you can see the process
+                  <br>then see you there at study tool<br>
 
 
 
