--- a/index2.html
+++ b/index2.html
@@ -244,6 +244,20 @@ its truly beautiful isn't it... when <b>he</b> said .....
                   by click on that you can see the process
                   <br>then see you there at study tool<br>
 
+                  <br>
+                  now its 11:10PM <br>
+                  so im gonna pray and sleeo<br>
+                  good night sweet dreams sleep well my princess <br>
+                  dont worry now you have super powered study tool ask how you want answer how easy you want or even summary or in short it will help all ways<br>
+                  it knows everything and sort of everything in most of the world so my hero now you can use this super power <br>
+                  unlock your super power <br>
+                  for now good night Hero😇<br>
+                  ALYSM<br>
+                  ly_ly_ly_ly<br>
+                  good night and all the best <br>
+                  you are the best <br>
+                  <br>
+
 
 
 <!--- end of pass--->
