--- a/index2.html
+++ b/index2.html
@@ -162,8 +162,40 @@ its truly beautiful isn't it... when <b>he</b> said .....
                                     Good night Honey😊<br>
                                     Laughing You😊 Always<br><br>
 
+                                    <hr>
+                                    <br>
 
+                                    26-09-2023 : 8:54PM <br>
+                                    hey how are you ... <br>
+                                    today im a little upset like... <br>
+                                    did you remeber in recent a highschool girl murder in your area, here something like that happended this week in AP<br>
+                                    a girl in class 11, she got proposed by 4 guys and she accepted 1 and another became her brother in that<br>
+                                    she trusted, her bf took her to out somewhere. here the four persons planned something and kidnapped her this way<br>
+                                    tourcherd her few days shaved her head in half and hanged her and thrown into well<br>
+                                    before she got kidnapped a person sawn and complained but in end police said her family to compromise and leave<br>
+                                    huh! this cruelly messed up world, some politics made ruin the justice for her <br>
+                                    after knowing about this my mind got some raged and i long long back i know that girl she use to call me brother i guess in class 5 times i met her in summer holidays<br>
+                                    after that i never, i guess may be shes that sister <br>
+                                    the cruel, the trash of 4 not get punished, due to politics<br>
+                                    this messed up world...<br><br><br>
 
+                                    in other side i said you about the competetion right, i do done all my work and my presentation document and my Team name is <b>MOLB-O1</b><br>
+                                    this morning i asked my college one of office staff, did he made the college submittion's he said he forgot and his behaviour so reckless and rude<br>
+                                    he asked me ' are you thinking you are intellegent than me, dont tell me what to do. '<br>
+                                    his shown so much ego and a bad attitude towards me and few seniors said he's such a bad attitude person and not responsible<br>
+                                    🙄 i tried to break his ego ... by saying 'if its come to responsibility, that competetion is important to me,,, as long as we you make it late
+                                     i may choose to take my step. im leaving this to you cz of your position and i still hold some respect.' and then i left, but that person still didnt made the submission <br>
+                                    and 28th september is last date for it<br>
+                                    so i contacted my class teacher then my class teacher said, 'its not new to our existed staff, about that persons way'<br>
+                                    then knowing that incident <br>
+                                    <br>
+                                     i worked all a part full weak building two projects out reaching my logics, but this person...<br>
+                                     🙄 sorry if i said wrong here, im a little, not a little some level of messed up, <br>
+                                     then or now i only have you to share my things , and i promised you if i had a bad day or any i will not hide it <br>
+                                     dont mind if i talked any wrong way, i tried my best to leave the situtaion but that person. tested my patience<br>
+                                     i'll try to not do like this again, today i went this cz another reason is this competition only comes once a year and waited a whole year for it now it getting out of hand due to some ego ist's attude and irresponsibility<br>
+                                     🙄 now im going to sleep <br>
+                                     forgive me if i did anywrong<br><br>
 
 <!--- end of pass--->  
 
